--- a/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/ProductDetails/Specifications/SpecificationsCell.xib
+++ b/CompositionalLayoutDemoApp/CompositionalLayoutDemoApp/Views/ProductDetails/Specifications/SpecificationsCell.xib
@@ -16,6 +16,17 @@
                 <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Taq-3X-8g0">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="188"/>
+                        <userDefinedRuntimeAttributes>
+                            <userDefinedRuntimeAttribute type="color" keyPath="borderColor">
+                                <color key="value" red="0.93725490196078431" green="0.93725490196078431" blue="0.93725490196078431" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                            </userDefinedRuntimeAttribute>
+                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                <real key="value" value="1"/>
+                            </userDefinedRuntimeAttribute>
+                        </userDefinedRuntimeAttributes>
+                    </view>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Specifications" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="WNO-Rq-nBb">
                         <rect key="frame" x="28" y="20" width="116" height="20"/>
                         <constraints>
@@ -186,12 +197,21 @@
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
             <constraints>
+                <constraint firstItem="Taq-3X-8g0" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" id="6tS-MZ-8O5"/>
                 <constraint firstItem="0ns-LV-LYe" firstAttribute="leading" secondItem="WNO-Rq-nBb" secondAttribute="leading" id="Axc-sx-zRN"/>
+                <constraint firstAttribute="bottom" secondItem="Taq-3X-8g0" secondAttribute="bottom" id="JSa-Bi-kKb"/>
                 <constraint firstAttribute="trailing" secondItem="0ns-LV-LYe" secondAttribute="trailing" constant="33.666666666666686" id="Ku7-TY-G1w"/>
                 <constraint firstItem="WNO-Rq-nBb" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" constant="20" id="O8P-VW-41k"/>
                 <constraint firstItem="WNO-Rq-nBb" firstAttribute="leading" secondItem="gTV-IL-0wX" secondAttribute="leading" constant="28" id="hmd-B3-H6W"/>
+                <constraint firstItem="Taq-3X-8g0" firstAttribute="top" secondItem="gTV-IL-0wX" secondAttribute="top" id="jPr-uy-rPK"/>
+                <constraint firstAttribute="trailing" secondItem="Taq-3X-8g0" secondAttribute="trailing" id="uEw-gJ-GWu"/>
                 <constraint firstItem="0ns-LV-LYe" firstAttribute="top" secondItem="WNO-Rq-nBb" secondAttribute="bottom" constant="18" id="vPQ-we-qm2"/>
             </constraints>
+            <userDefinedRuntimeAttributes>
+                <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                    <real key="value" value="0.0"/>
+                </userDefinedRuntimeAttribute>
+            </userDefinedRuntimeAttributes>
             <point key="canvasLocation" x="70.769230769230774" y="20.616113744075829"/>
         </collectionViewCell>
     </objects>
